--- a/src/app/groups/group-add/group-add.component.html
+++ b/src/app/groups/group-add/group-add.component.html
@@ -11,4 +11,6 @@
       </div>
       <button type="submit" class="btn btn-primary" value="Add a group" (click)="addGroup(name, note)">Save</button>
     </form>
+    <br>
+    <p><b class="leash-text-yellow">{{userMsg}}</b></p>
 </div>
