--- a/src/app/groups/group-edit/group-edit.component.html
+++ b/src/app/groups/group-edit/group-edit.component.html
@@ -11,4 +11,6 @@
     <button type="submit" class="btn btn-success" (click)="saveEdit(note.value)">Save</button>
 
   </form>
+  <br>
+  <p><b class="leash-text-yellow">{{userMsg}}</b></p>
 </div>
