--- a/src/app/resources/resource-add/resource-add.component.html
+++ b/src/app/resources/resource-add/resource-add.component.html
@@ -30,4 +30,6 @@
           <div class="form-group"></div>
             <button type="submit" class="btn btn-primary" value="Add a resource" (click)="addResource(name, note, group.value, schedulingDepend.value)">Save</button>
           </form>
+          <br>
+          <p><b class="leash-text-yellow">{{userMsg}}</b></p>
   </div>
