--- a/src/app/resources/resource-edit/resource-edit.component.html
+++ b/src/app/resources/resource-edit/resource-edit.component.html
@@ -31,5 +31,7 @@
       <button type="submit" class="btn btn-success" (click)="saveEdit(name.value, note.value, group.value, schedulingDepend.value)">Submit</button>
 
     </form>
+    <br>
+    <p><b class="leash-text-yellow">{{userMsg}}</b></p>
 </div>
 
