--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,32 +1,32 @@
 <div class="row">
   <div class="col-sm-4 leash-bg-light text-white full-height">
     <br>
-      <button class="btn btn-success" (click) ="activeItem = 'addGroup'">New Group</button>
+      <button class="btn leash-bg-orange pull-right leash-text-white" (click) ="activeItem = 'addGroup'"><b>ADD GROUP</b> <fa [name]="'plus-circle'" [size]=2></fa></button>
       <br> <br> <br>
       <ul class="list-group">
-          <li class="list-group-item text-muted" *ngFor = "let group of groups | async" (click) = "selectedGroupId = group.id ; getGroup(group.id) ; activeItem= group.data.name ; editMode = false" [ngClass]="{active: activeItem ===  group.data.name}" >
-            <strong>{{group.data.name}} (<button (click)="deleteGroup(group.id)" class="text-danger">Delete</button>)</strong>
-            <br>
-            {{group.data.note}}
+          <li class="list-group-item text-muted" *ngFor = "let group of groups | async" (click) = "selectedGroupId = group.id ; getGroup(group.id) ; activeItem= group.data.name ; editMode = false" [ngClass]="{leashactive: activeItem ===  group.data.name}" >
+            <h4 class="no-padding-margin">{{group.data.name}}</h4>
+       
+            <p>{{group.data.note}}</p>
           </li>
       </ul>
   </div>
   
-  <div *ngIf="activeItem !='addGroup' ; else showAddGroup" class="col-sm-8 leash-bg-white text-white full-height">
-      <div *ngIf="editMode !=true ; else showEditGroup" class="col-sm-8 leash-bg-white text-white full-height">
-          <div *ngIf="!selectedGroupId ; else showGroupDetail" class="col-sm-8 leash-bg-white text-white full-height">
+  <div *ngIf="activeItem !='addGroup' ; else showAddGroup" class="col-sm-8  leash-bg-white text-white full-height">
+      <div *ngIf="editMode !=true ; else showEditGroup" class="leash-10-pc-margin-left">
+          <div *ngIf="!selectedGroupId ; else showGroupDetail">
               <h3>No group selected</h3>
           </div>
           <ng-template #showGroupDetail> 
           <app-group-detail [group]='group'></app-group-detail>
         </ng-template>
           <br>
-          <div *ngIf="selectedGroupId" class="text-center">
-            <div class="col-md-6">
-              <button class="btn btn-xs btn-block leash-bg-light" (click)="editMode = true"><fa [name]="'edit'" [size]=3></fa><p>Edit</p></button>
+          <div *ngIf="selectedGroupId" class="text-center leash-20-pc-margin">
+            <div class="col-md-4 col-md-offset-1">
+              <button class="btn btn-xs btn-block leash-bg-light" (click)="editMode = true"><fa [name]="'edit'" [size]=4></fa></button>
             </div>
-              <div class="col-md-6">
-              <button class="btn btn-xs btn-block leash-bg-light" (click)="deleteGroup(selectedGroupId)"><fa [name]="'trash'" [size]=3></fa><p>Delete</p></button>
+              <div class="col-md-4 col-md-offset-1">
+              <button class="btn btn-xs btn-block leash-bg-yellow" (click)="deleteGroup(selectedGroupId)"><fa [name]="'trash'" [size]=4></fa></button>
           </div>
         </div>
           
@@ -37,7 +37,7 @@
 
   </div>
       
-    <ng-template #showAddGroup > 
+    <ng-template #showAddGroup> 
         <app-group-add></app-group-add>
     </ng-template>
   </div>
