--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,9 +16,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown" appDropdown>
                         <button class="dropdown-toggle dropbtn" role="button">Account <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a routerLink="user-profile">My Account</a></li>
-                            <li><a href="" (click)='logout()'>Sign Out</a></li>
+                        <ul class="dropdown-menu leash-text-dark">
+                            <li><a routerLink="user-profile"><p class="leash-text-dark">My Account </p></a></li>
+                            <li><a href="" (click)='logout()'><p class="leash-text-dark">Sign Out</p></a></li>
                         </ul>
                     </li>
                 </ul>
