--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -2,32 +2,32 @@
 <div class="row">
   <div class="col-sm-4 leash-bg-light text-white full-height">
     <br>
-      <button class="btn btn-success" (click) ="activeItem = 'addResource'">New Resource</button>
+      <button class="btn leash-bg-orange pull-right leash-text-white" (click) ="activeItem = 'addResource'"><b>ADD RESOURCE</b> <fa [name]="'plus-circle'" [size]=2></fa></button>
       <br> <br> <br>
       <ul class="list-group">
-          <li class="list-group-item text-muted" *ngFor = "let resource of resources | async" (click) = "selectedResourceId = resource.id ; getResource(resource.id) ; activeItem= resource.data.title ; editMode = false" [ngClass]="{active: activeItem ===  resource.data.title}" >
-            <strong>{{resource.data.title}} (<button (click)="deleteResource(resource.id)" class="text-danger">Delete</button>)</strong>
-            <br>
-            {{resource.data.note}}
+          <li class="list-group-item text-muted" *ngFor = "let resource of resources | async" (click) = "selectedResourceId = resource.id ; getResource(resource.id) ; activeItem= resource.data.title ; editMode = false" [ngClass]="{leashactive: activeItem ===  resource.data.title}" >
+            <h4 class="no-padding-margin">{{resource.data.title}}</h4>
+         
+            <p>{{resource.data.note}}</p>
           </li>
       </ul>
   </div>
   
   <div *ngIf="activeItem !='addResource' ; else showAddResource" class="col-sm-8 leash-bg-white text-white full-height">
-      <div *ngIf="editMode !=true ; else showEditResource" class="col-sm-8 leash-bg-white text-white full-height">
-            <div *ngIf="!selectedResourceId ; else showResourceDetail" class="col-sm-8 leash-bg-white text-white full-height">
+      <div *ngIf="editMode !=true ; else showEditResource" class="leash-10-pc-margin-left">
+            <div *ngIf="!selectedResourceId ; else showResourceDetail">
                     <h3>No resource selected</h3>
             </div>
             <ng-template #showResourceDetail>  
           <app-resource-detail [resource]='resource'></app-resource-detail>
         </ng-template>
           <br>
-          <div *ngIf="selectedResourceId" class="text-center">
-                <div class="col-md-6">
-                  <button class="btn btn-xs btn-block leash-bg-light" (click)="editMode = true"><fa [name]="'edit'" [size]=3></fa><p>Edit</p></button>
+          <div *ngIf="selectedResourceId" class="text-center leash-20-pc-margin">
+                <div class="col-md-4 col-md-offset-1">
+                  <button class="btn btn-xs btn-block leash-bg-light" (click)="editMode = true"><fa [name]="'edit'" [size]=4></fa></button>
                 </div>
-                  <div class="col-md-6">
-                  <button class="btn btn-xs btn-block leash-bg-light" (click)="deleteResource(selectedResourceId)"><fa [name]="'trash'" [size]=3></fa><p>Delete</p></button>
+                  <div class="col-md-4 col-md-offset-1">
+                  <button class="btn btn-xs btn-block leash-bg-yellow" (click)="deleteResource(selectedResourceId)"><fa [name]="'trash'" [size]=4></fa></button>
               </div>
             </div>
         </div>
