--- a/src/app/groups/group-add/group-add.component.html
+++ b/src/app/groups/group-add/group-add.component.html
@@ -2,7 +2,7 @@
   <form>
       <div class="form-group">
         <label for="name">Group Name</label>
-        <input type="text" [(ngModel)] = "name" class="form-control" name="name" placeholder = "Name...">
+        <input [(ngModel)]="name"  type="text"  class="form-control" name="name" placeholder = "Name...">
       </div>
       <div class="form-group">
         <label for="note">Notes</label>
