--- a/src/app/login/login-page/login-page.component.html
+++ b/src/app/login/login-page/login-page.component.html
@@ -9,7 +9,7 @@
                     <h3 class="text-center">Existing User Login</h3>
                     <label for="email-login">Email</label>
                     
-
+                    <input type="email" id="email-login" placeholder="Email" required class="form-control input-lg" formControlName="email" required>
 
                     <div *ngIf="formErrors.email" class="text-danger text-center">
                         {{ formErrors.email }}
